# biplup-roguelike

./: .gitignore  LICENSE.txt  README.md  meson.build  meson_options.txt
assets/blob/: meson.build
include/: bg_with_road.h  blob.h  example.h  input.h  input_output.h  kinematics.h  move.h  object_utils.h  player_movement.h  press_to_start.h  score.h  sound.h  system_utils.h  text.h  types.h  utils.h
include/assets/: aero_fly.h  aero_fly_32.h  aero_fly_32_bw.h  aero_single.h  bg_with_road.h  biplup_walk.h  biplup_walk_32.h  biplup_walk_32_bw.h  blob.h  cactus.h  cactus_1.h  cactus_1_32.h  cloud.h  cloud_32.h  dactyl_fly_32.h  dactyl_flying.h  dactyl_glide.h  dactyl_glide_32.h  dactyl_single.h  dino_walk.h  dino_walk_32.h  sudowoodo.h  sudowoodo_32.h  sudowoodo_32_bw.h  swablu_bw.h
meson/: gba.ini
meson/dev/: meson.build
meson/toolchain/: meson.build
src/: bg_with_road.s  collisions_example.c  control.h  input.c  input_output.c  kinematics.c  main.c  move.c  move.h  object_utils.c  player_movement.c  player_movement_example.c  player_movement_with_score_example.c  press_to_start.c  press_to_start_example.c  score.c  score_example.c  sound.c  system_utils.c  text.c  util.c  util.h  utils.c
src/assets/: aero_fly.s  aero_fly_32.s  aero_fly_32_bw.s  aero_single.s  bg_with_road.s  biplup_walk.s  biplup_walk_32.s  biplup_walk_32_bw.s  blob.s  cactus.s  cactus_1.s  cactus_1_32.s  cloud.s  cloud_32.s  dactyl_fly_32.s  dactyl_flying.s  dactyl_glide.s  dactyl_glide_32.s  dactyl_single.s  dino_walk.s  dino_walk_32.s  sudowoodo.s  sudowoodo_32.s  sudowoodo_32_bw.s  swablu_bw.s
subprojects/: agbabi.wrap  butano.wrap  gba-hpp.wrap  gba-link-connection.wrap  gbfs.wrap  gbt-player.wrap  libfat.wrap  libgba.wrap  libsavgba.wrap  libseven.wrap  libtonc.wrap  libugba.wrap  libutil.wrap  maxmod.wrap  minrt.wrap  mmutil.wrap  posprintf.wrap  superfamiconv.wrap
subprojects/packagefiles/butano/: meson.build  meson_options.txt
subprojects/packagefiles/gba-link-connection/: meson.build
subprojects/packagefiles/gbfs/: meson.build
subprojects/packagefiles/gbt-player/: meson.build
subprojects/packagefiles/libfat/: libfatversion.h.in  meson.build
subprojects/packagefiles/libgba/: meson.build  meson_options.txt
subprojects/packagefiles/libgba/src/: amiga_fnt.h  amiga_fnt.s
subprojects/packagefiles/libtonc/: meson.build
subprojects/packagefiles/libugba/: meson.build
subprojects/packagefiles/maxmod/: meson.build
subprojects/packagefiles/mmutil/: meson.build
subprojects/packagefiles/superfamiconv/: meson.build
test_include/: test_input.h  test_kinematics.h  test_object_utils.h  test_system_utils.h  test_text.h
tests/: test_executable.c  test_input.c  test_kinematics.c  test_object_utils.c  test_system_utils.c  test_text.c
